2005-11-20 Jelmer Vernooij <jelmer@samba.org>
	* genericparser.cs,decl.cs,class.cs: allow members with the same name 
 	as their enclosing type, just like vbc does

2005-11-19 Jelmer Vernooij <jelmer@samba.org>
 	* mb-parser.jay: fix error handling when array modifiers are specified
 	on both type and variable name

2005-11-18 Jelmer Vernooij <jelmer@samba.org>
 	* mb-tokenizer.cs: add fix so the tokenizer no longer parses label 
 	names at the start of continuation lines

2005-11-16 Maverson Eduardo Schulze Rosa <maverson@gmail.com>
	* mb-parser.jay: Do not create a set_block with ReadOnly Properties.
	* typemanager.cs: Search for correct DefaultPropName and the class
	Type that contains the Default Property.
	* expression.cs: Send the correct Type for porperties search;
	Fix Error with uses of default properties without a Default Property
	definition.
	
2005-11-09 Renato Suga <renato.suga@gmail.com>
	* mb-parser.jay: added STOP to statement rule to allow a keyword STOP
	in an iteration_statement.

2005-11-07 Renato Suga <renato.suga@gmail.com>
	* Expression.cs: commented this line: 
	 //      SimpleName.Error_ObjectRefRequired (ec, loc, me.Name);


2005-11-05  Kornél Pál  <kornelpal@hotmail.com>

	* AssemblyInfo.cs: Use Consts.MonoVersion as AssemblyVersion.
	* mbas.exe.sources: Added Consts.cs.

2005-11-02  Rafael Teixeira <rafaelteixeirabr@hotmail.com> 
	* typemanager.cs: avoiding some Null Pointer Exceptions in GetPertinentStandardModules

2005-11-01 Aldo Monteiro do Nascimento <aldo@psl-pr.softwarelivre.org>
 	* mb-parser.jay: created a new parser rule to match a interface
 	declared inside another interface: "opt_interface_declaration"
 	* mb-parser.jay: when redeclare compiler constants no compilation
 	error is raised, and than the redeclaring works as expected.
 
2005-10-31 Maverson Eduardo Schulze Rosa <maverson@gmail.com>
 	* ecore.cs: Fix UnboxCast Emit calling Activator.CreateInstance when
 	necessary.
